2008-01-07  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gud-gdb-command-name): Explain
	"--annotate=3" option is necessary for the Graphical Interface.

2008-01-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-hg.el (vc-hg-dir-state): Pass the dir argument to
	vc-hg-command.

2008-01-07  Glenn Morris  <rgm@gnu.org>

	* calc/calc-help.el (calc-full-help): Use emacs-copyright.

2008-01-06  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/hideif.el (hide-ifdef-mode-menu): Put hide-ifdef commands
	on menu bar.

2008-01-06  Michael Albinus  <michael.albinus@gmx.de>

	* ffap.el (ffap-read-file-or-url): Let-bind
	`file-name-handler-alist' due to `rfn-eshadow-update-overlay'.

2008-01-05  Sven Joachim  <svenjoac@gmx.de>

	* vc-bzr.el: Fix typo in header.

2008-01-05  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (custom-deps, finder-data): Depend on autoloads
	instead of loaddefs.el.

2008-01-05  Glenn Morris  <rgm@gnu.org>

	* progmodes/verilog-mode.el: Replace all instances of
	string-to-int with string-to-number, insert-string with insert,
	and read-input with read-string.
	(top-level): No need to require imenu, reporter, dinotrace, vc,
	font-lock when compiling.  Always require compile.  Relegate remaining
	compatibility cruft to XEmacs.  Don't require font-lock.
	(verilog-version): Remove superfluous concat.
	(dinotrace-unannotate-all, zmacs-activate-region, customize-apropos):
	No need to define.
	(verilog-regexp-opt): On Emacs, just make it an alias for regexp-opt.
	(verilog-font-lock-keywords, verilog-font-lock-keywords-1)
	(verilog-font-lock-keywords-2, verilog-font-lock-keywords-3)
	(verilog-startup-message-displayed): These are variables, not constants.
	(verilog-batch-execute-func, verilog-auto-inst)
	(verilog-auto-inst-param): Use mapc rather than mapcar.
	(sigs-in, sigs-inout, sigs-out): Define for compiler rather than
	actually defining.
	(verilog-modi-get-decls, verilog-modi-get-sub-decls)
	(verilog-modi-get-outputs, verilog-modi-get-inouts)