@@ -1,3 +1,7 @@
+2008-01-07  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-hg.el (vc-hg-log-view-mode): Handle the user field better.
+
 2008-01-07  Nick Roberts  <nickrob@snap.net.nz>
 
 	* progmodes/gdb-ui.el (gud-gdb-command-name): Explain
